channed id created

--- a/api-project.ipynb
+++ b/api-project.ipynb
@@ -2,21 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from config import API_Key"
+    "from config import API_Key\n",
+    "\n",
+    "from googleapiclient.discovery import build\n",
+    "from IPython.display import JSON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from methods import collect_channel_stats, collect_video_details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get credentials and create an API client\n",
+    "api_service_name = \"youtube\"\n",
+    "api_version = \"v3\"\n",
+    "\n",
+    "youtube = build(api_service_name, api_version, developerKey=API_Key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channel_ids = \"UCWpk9PSGHoJW1hZT4egxTNQ\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channel_stats = collect_channel_stats(youtube, channel_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channel_stats"
+   ]
   }
  ],
  "metadata": {
