--- a/api-project.ipynb
+++ b/api-project.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "from config import API_Key\n",
+    "import requests\n",
     "\n",
     "from googleapiclient.discovery import build\n",
     "from IPython.display import JSON"
@@ -16,16 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from methods import collect_channel_stats, collect_video_details"
+    "from methods import collect_channel_stats, collect_video_details, collect_video_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,25 +39,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "channel_ids = \"UCYO_jab_esuFRV4b17AJtAw\""
+    "channel_ids = \"UCatnasFAiXUvWwH8NlSdd3A\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'items'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[57], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m channel_stats \u001b[38;5;241m=\u001b[39m collect_channel_stats(youtube, channel_ids)\n",
+      "File \u001b[1;32mc:\\Users\\BETÜL DEMİRDAĞ\\Desktop\\Betül\\API-Project\\methods.py:27\u001b[0m, in \u001b[0;36mcollect_channel_stats\u001b[1;34m(youtube, channel_ids)\u001b[0m\n\u001b[0;32m     24\u001b[0m response \u001b[38;5;241m=\u001b[39m request\u001b[38;5;241m.\u001b[39mexecute()\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# loop through items in response\u001b[39;00m\n\u001b[1;32m---> 27\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mitems\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[0;32m     28\u001b[0m     data \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchannelName\u001b[39m\u001b[38;5;124m'\u001b[39m: item[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msnippet\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     29\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubscribers\u001b[39m\u001b[38;5;124m'\u001b[39m: item[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstatistics\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubscriberCount\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     30\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mviews\u001b[39m\u001b[38;5;124m'\u001b[39m: item[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstatistics\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mviewCount\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     31\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtotalVideos\u001b[39m\u001b[38;5;124m'\u001b[39m: item[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstatistics\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvideoCount\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     32\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplaylistId\u001b[39m\u001b[38;5;124m'\u001b[39m: item[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcontentDetails\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelatedPlaylists\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muploads\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     33\u001b[0m     }\n\u001b[0;32m     34\u001b[0m     all_data\u001b[38;5;241m.\u001b[39mappend(data)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'items'"
+     ]
+    }
+   ],
    "source": [
     "channel_stats = collect_channel_stats(youtube, channel_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
