--- a/api-project.ipynb
+++ b/api-project.ipynb
@@ -2,16 +2,402 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns\n",
     "\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyOAuth\n",
     "\n",
-    "from config import client_ID, client_secret, redirect_url\n"
+    "from config import client_ID, client_secret, redirect_url\n",
+    "from methods import spotipy_sp, get_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spotipy_sp(scope):\n",
+    "    \"\"\"\n",
+    "    for creating Spotify searching scope: client_id, client_secret, redirect_url, scope\n",
+    "\n",
+    "    Params:\n",
+    "\n",
+    "    scope: Spotify searching scope (https://developer.spotify.com/documentation/web-api/concepts/scopes)\n",
+    "\n",
+    "    Returns:\n",
+    "\n",
+    "    sp method\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    sp = spotipy.Spotify(auth_manager=SpotifyOAuth(client_id = client_ID,\n",
+    "                                               client_secret= client_secret,\n",
+    "                                               redirect_uri=redirect_url,\n",
+    "                                               scope = scope))\n",
+    "    \n",
+    "    return sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<spotipy.client.Spotify at 0x17d85d54110>"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spotipy_sp(\"user-follow-read\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3505, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\BETÜL DEMİRDAĞ\\AppData\\Local\\Temp\\ipykernel_1632\\2981299833.py\", line 1, in <module>\n",
+      "    df = get_data(50)\n",
+      "         ^^^^^^^^^^^^\n",
+      "  File \"c:\\API-Project\\methods.py\", line 43, in get_data\n",
+      "NameError: name 'sp' is not defined\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2102, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1310, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1199, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1052, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 978, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 878, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 712, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\stack_data\\core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\stack_data\\core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\stack_data\\core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "           ^^^^^\n",
+      "  File \"c:\\Program Files\\Anaconda\\Lib\\site-packages\\executing\\executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = get_data(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>followers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Maroon 5</td>\n",
+       "      <td>83</td>\n",
+       "      <td>[pop]</td>\n",
+       "      <td>41537191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Selena Gomez</td>\n",
+       "      <td>81</td>\n",
+       "      <td>[pop, post-teen pop]</td>\n",
+       "      <td>47235425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Avril Lavigne</td>\n",
+       "      <td>73</td>\n",
+       "      <td>[canadian pop, candy pop, dance pop, pop]</td>\n",
+       "      <td>10525462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Queen</td>\n",
+       "      <td>84</td>\n",
+       "      <td>[classic rock, glam rock, rock]</td>\n",
+       "      <td>48985321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mabel Matiz</td>\n",
+       "      <td>68</td>\n",
+       "      <td>[turkish pop]</td>\n",
+       "      <td>3777585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Halsey</td>\n",
+       "      <td>80</td>\n",
+       "      <td>[electropop, etherpop, indie poptimism, pop]</td>\n",
+       "      <td>21232288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Nightwish</td>\n",
+       "      <td>64</td>\n",
+       "      <td>[fantasy metal, finnish metal, finnish power m...</td>\n",
+       "      <td>2095036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Three Days Grace</td>\n",
+       "      <td>72</td>\n",
+       "      <td>[alternative metal, canadian metal, canadian r...</td>\n",
+       "      <td>5902647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Metallica</td>\n",
+       "      <td>80</td>\n",
+       "      <td>[hard rock, metal, old school thrash, rock, th...</td>\n",
+       "      <td>26440936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>The Beatles</td>\n",
+       "      <td>83</td>\n",
+       "      <td>[british invasion, classic rock, merseybeat, p...</td>\n",
+       "      <td>26727111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Twenty One Pilots</td>\n",
+       "      <td>78</td>\n",
+       "      <td>[modern rock, pop, pov: indie, rock]</td>\n",
+       "      <td>24052659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Foy Vance</td>\n",
+       "      <td>53</td>\n",
+       "      <td>[british singer-songwriter, indie folk, irish ...</td>\n",
+       "      <td>233569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Adele</td>\n",
+       "      <td>84</td>\n",
+       "      <td>[british soul, pop, pop soul, uk pop]</td>\n",
+       "      <td>53218333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Coldplay</td>\n",
+       "      <td>87</td>\n",
+       "      <td>[permanent wave, pop]</td>\n",
+       "      <td>48655485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Nazan Öncel</td>\n",
+       "      <td>53</td>\n",
+       "      <td>[turkish instrumental, turkish pop, turkish si...</td>\n",
+       "      <td>602466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Imagine Dragons</td>\n",
+       "      <td>85</td>\n",
+       "      <td>[modern rock, pop, rock]</td>\n",
+       "      <td>51418204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Şanışer</td>\n",
+       "      <td>57</td>\n",
+       "      <td>[turkish hip hop]</td>\n",
+       "      <td>1107573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>The Chainsmokers</td>\n",
+       "      <td>78</td>\n",
+       "      <td>[pop]</td>\n",
+       "      <td>20320197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Linkin Park</td>\n",
+       "      <td>83</td>\n",
+       "      <td>[alternative metal, nu metal, post-grunge, rap...</td>\n",
+       "      <td>24804997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Billie Eilish</td>\n",
+       "      <td>87</td>\n",
+       "      <td>[art pop, pop]</td>\n",
+       "      <td>90278725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Zayde Wølf</td>\n",
+       "      <td>53</td>\n",
+       "      <td>[bossbeat, modern alternative rock, rebel blues]</td>\n",
+       "      <td>275159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Arctic Monkeys</td>\n",
+       "      <td>85</td>\n",
+       "      <td>[garage rock, modern rock, permanent wave, roc...</td>\n",
+       "      <td>22910084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Yüzyüzeyken Konuşuruz</td>\n",
+       "      <td>64</td>\n",
+       "      <td>[turkish alternative rock, turkish rock]</td>\n",
+       "      <td>2691834</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              artist_name  popularity  \\\n",
+       "0                Maroon 5          83   \n",
+       "1            Selena Gomez          81   \n",
+       "2           Avril Lavigne          73   \n",
+       "3                   Queen          84   \n",
+       "4             Mabel Matiz          68   \n",
+       "5                  Halsey          80   \n",
+       "6               Nightwish          64   \n",
+       "7        Three Days Grace          72   \n",
+       "8               Metallica          80   \n",
+       "9             The Beatles          83   \n",
+       "10      Twenty One Pilots          78   \n",
+       "11              Foy Vance          53   \n",
+       "12                  Adele          84   \n",
+       "13               Coldplay          87   \n",
+       "14            Nazan Öncel          53   \n",
+       "15        Imagine Dragons          85   \n",
+       "16                Şanışer          57   \n",
+       "17       The Chainsmokers          78   \n",
+       "18            Linkin Park          83   \n",
+       "19          Billie Eilish          87   \n",
+       "20             Zayde Wølf          53   \n",
+       "21         Arctic Monkeys          85   \n",
+       "22  Yüzyüzeyken Konuşuruz          64   \n",
+       "\n",
+       "                                                genre  followers  \n",
+       "0                                               [pop]   41537191  \n",
+       "1                                [pop, post-teen pop]   47235425  \n",
+       "2           [canadian pop, candy pop, dance pop, pop]   10525462  \n",
+       "3                     [classic rock, glam rock, rock]   48985321  \n",
+       "4                                       [turkish pop]    3777585  \n",
+       "5        [electropop, etherpop, indie poptimism, pop]   21232288  \n",
+       "6   [fantasy metal, finnish metal, finnish power m...    2095036  \n",
+       "7   [alternative metal, canadian metal, canadian r...    5902647  \n",
+       "8   [hard rock, metal, old school thrash, rock, th...   26440936  \n",
+       "9   [british invasion, classic rock, merseybeat, p...   26727111  \n",
+       "10               [modern rock, pop, pov: indie, rock]   24052659  \n",
+       "11  [british singer-songwriter, indie folk, irish ...     233569  \n",
+       "12              [british soul, pop, pop soul, uk pop]   53218333  \n",
+       "13                              [permanent wave, pop]   48655485  \n",
+       "14  [turkish instrumental, turkish pop, turkish si...     602466  \n",
+       "15                           [modern rock, pop, rock]   51418204  \n",
+       "16                                  [turkish hip hop]    1107573  \n",
+       "17                                              [pop]   20320197  \n",
+       "18  [alternative metal, nu metal, post-grunge, rap...   24804997  \n",
+       "19                                     [art pop, pop]   90278725  \n",
+       "20   [bossbeat, modern alternative rock, rebel blues]     275159  \n",
+       "21  [garage rock, modern rock, permanent wave, roc...   22910084  \n",
+       "22           [turkish alternative rock, turkish rock]    2691834  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   }
  ],
